96: Update CSS to prevent word wrapping in table cells

--- a/resources/html/styles.css
+++ b/resources/html/styles.css
@@ -10,6 +10,7 @@ td, th {
     padding-right:  1em;
     padding-top:    0.5em;
     padding-bottom: 0.5em;
+    white-space:    nowrap;
 }
 
 th {
